# sftp-parallel

./: .gitignore  AGENTS.md  ARCHITECTURE_REFLECTION.md  README.md  pyproject.toml  sftp-parallel-upload-v7.sh
.sisyphus/: boulder.json
.sisyphus/evidence/: sftp-baseline-error-badj.txt  sftp-baseline-error-noargs.txt  sftp-baseline-help.txt  sftp-baseline-success.txt  task-0.1-ssh-checksum.txt  task-0.2-sftp-batch-output.txt  task-0.3-rich-progress.py  task-0.3-rich-progress.txt  task-1-busy-cleanup.txt  task-1-cleanup-function.txt  task-1-nudge-cleanup.txt  task-1-package-structure.txt  task-1-periodic-cleanup.txt  task-1-results.json  task-1-validation.md  task-10-longopts.txt  task-11-shellcheck.txt  task-12-exitcodes.txt  task-13-sections.txt  task-14-envvars.txt  task-15-cleanup.txt  task-2-cli-argparse.txt  task-2-constants.txt  task-2-parallel-fetch.txt  task-3-batch-escape.txt  task-3-check-order.txt  task-3-child-nudge.txt  task-3-escalation.txt  task-3-logging.txt  task-3-marker-skip.txt  task-3-parent-unchanged.txt  task-4-abort-logging.txt  task-4-busy-detection.txt  task-4-concurrency.txt  task-4-memory-cleanup.txt  task-4-ratelimit-logging.txt  task-4-rename.txt  task-4-subprocess-wrapper.txt  task-4-watcher-setup.txt  task-5-single-upload.txt  (+14 more)
.sisyphus/plans/: continuation-review.md  continuation-subagents.md  sftp-parallel-upload-review.md  sftp-python-port.md  (+1 more)
tests/: conftest.py  test_batch.py  test_cli.py  test_lib.py  test_progress.py  test_pty_worker.py  test_signals.py  test_upload.py  test_uploader.py  test_verify.py  test_worker.py
(+12 files in other folders)
